<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2014 The Android Open Source Project.
  ~
  ~        yinglovezhuzhu@gmail.com
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceGroup xmlns:camera="http://schemas.android.com/apk/res/com.opensource.opencamera">
    <PreferenceGroup camera:title="@string/pref_camcorder_settings_category">
        <IconListPreference
            camera:defaultValue="@string/pref_video_quality_default"
            camera:entries="@array/pref_video_quality_entries"
            camera:entryValues="@array/pref_video_quality_entryvalues"
            camera:key="pref_video_quality_key"
            camera:largeIcons="@array/video_quality_icons"
            camera:title="@string/pref_video_quality_title" />
        <IconListPreference
            camera:defaultValue="@string/pref_camera_video_flashmode_default"
            camera:entries="@array/pref_camera_video_flashmode_entries"
            camera:entryValues="@array/pref_camera_video_flashmode_entryvalues"
            camera:icons="@array/pref_camera_video_flashmode_icons"
            camera:key="pref_camera_video_flashmode_key"
            camera:largeIcons="@array/video_flashmode_icons"
            camera:title="@string/pref_camera_flashmode_title" />
        <IconListPreference
            camera:defaultValue="@string/pref_camera_whitebalance_default"
            camera:entries="@array/pref_camera_whitebalance_entries"
            camera:entryValues="@array/pref_camera_whitebalance_entryvalues"
            camera:icons="@array/pref_camera_whitebalance_icons"
            camera:key="pref_camera_whitebalance_key"
            camera:largeIcons="@array/whitebalance_icons"
            camera:title="@string/pref_camera_whitebalance_title" />
        <ListPreference
            camera:defaultValue="@string/pref_camera_coloreffect_default"
            camera:entries="@array/pref_camera_coloreffect_entries"
            camera:entryValues="@array/pref_camera_coloreffect_entryvalues"
            camera:key="pref_camera_coloreffect_key"
            camera:title="@string/pref_camera_coloreffect_title" />
        <IconListPreference
            camera:defaultValue="@string/pref_camera_id_default"
            camera:key="pref_camera_id_key"
            camera:title="@string/pref_camera_id_title" />
    </PreferenceGroup>
</PreferenceGroup>
