<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2014 The Android Open Source Project.
  ~
  ~        yinglovezhuzhu@gmail.com
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/control_bar"
    android:layout_width="76dp"
    android:layout_height="match_parent"
    android:layout_alignParentRight="true"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="13dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="top|center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            style="@style/ReviewControlGroup"
            android:layout_marginBottom="15dp">

            <ImageView
                android:id="@+id/btn_cancel"
                style="@style/ReviewControlIcon"
                android:src="@drawable/btn_ic_review_cancel" />

            <TextView
                style="@style/ReviewControlText"
                android:text="@string/review_cancel" />
        </LinearLayout>

        <LinearLayout
            style="@style/ReviewControlGroup"
            android:layout_marginBottom="15dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/btn_retake"
                style="@style/ReviewControlIcon"
                android:src="@drawable/btn_ic_review_retake_photo" />

            <TextView
                style="@style/ReviewControlText"
                android:text="@string/review_retake" />
        </LinearLayout>

        <LinearLayout
            style="@style/ReviewControlGroup"
            android:layout_marginBottom="15dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/btn_play"
                style="@style/ReviewControlIcon"
                android:src="@drawable/btn_ic_review_play" />

            <TextView
                style="@style/ReviewControlText"
                android:text="@string/review_play" />
        </LinearLayout>
    </LinearLayout>

    <com.opensource.opencamera.ShutterButton
        android:id="@+id/shutter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_shutter"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="center"
        android:src="@drawable/btn_ic_camera_shutter" />

    <LinearLayout
        style="@style/ReviewControlGroup"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/btn_done"
            style="@style/ReviewControlIcon"
            android:src="@drawable/btn_ic_review_done" />

        <TextView
            style="@style/ReviewControlText"
            android:text="@string/review_ok" />
    </LinearLayout>
</RelativeLayout>
